# axgeom

./: Cargo.toml  README.md  readme.md
src/: lib.rs  range.rs  ray.rs  rect.rs  vec.rs  vec2.rs
tests/: test.rs
