[package]
name = "axgeom"
version = "1.10.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "Library that provides ability to extract 1d ranges out of 2d objects."
license = "MIT"
repository = "https://github.com/tiby312/axgeom"
keywords = ["geometry", "axis"]
readme = "readme.md"
edition = "2018"


[features]
default = ["std"]
std = ["num-traits/std","roots"]

[dependencies]
roots = {version="0.0.6",optional = true }
num-traits = {version="0.2",default-features = false}
serde={version="1.0", features=["derive"] ,default-features = false}
partial-min-max = "0.4.0"