[package]
name = "axgeom"
version = "1.12.1"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "Library that provides ability to extract 1d ranges out of 2d objects."
license = "MIT"
repository = "https://github.com/tiby312/axgeom"
keywords = ["geometry", "axis"]
readme = "readme.md"
edition = "2018"



[dependencies]
roots = {version="0.0.6" }
